<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Finance Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_expense">Add expense</string>
    <string name="title_activity_transaction">Add Expense</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="pref_general_settings">General Settings</string>
    <string name="pref_expense_settings">Expenses</string>
    <string name="pref_income_settings">Income Management</string>
    <string name="pref_about_settings">About</string>
    <string name="pref_title_currency">Currency</string>
    <string name="pref_title_categories">Categories</string>
    <string name="add_category">Add</string>
    <string name="pref_title_regular_income">Regular income</string>
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_title_about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="default_text_category_name">Enter name</string>
    <string name="history">History</string>

    <string-array name="categories_array">
        <item>Transportation</item>
        <item>Food</item>
        <item>Weed</item>
        <item>Travel</item>
    </string-array>

    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_categories_edit">CategoriesEditActivity</string>
    <string name="title_activity_edit_categories">Edit Category</string>
    <string name="title_activity_list_transactions">Transactions</string>
    <string name="title_activity_create_transaction">Create Transaction</string>
    <string name="title_activity_edit_transaction">Edit Transaction</string>
    <string name="Update">Update</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="title_activity_main">Finance Manager</string>
    <string name="transaction_comment_hint">Comment</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_comment">Note</string>
    <string name="feedback">Feedback</string>
    <string name="name_field">Name</string>
    <string name="color_field">color</string>

</resources>
