<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general_settings"
        android:key="pref_key_general_settings">
        <Preference
            android:key="pref_key_currency"
            android:title="@string/pref_title_currency" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_expense_settings"
        android:key="pref_key_expense_settings" >
        <Preference
            android:key="pref_key_categories"
            android:title="@string/pref_title_categories" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_income_settings"
        android:key="pref_key_income_settings" >
        <Preference
            android:key="pref_key_regular_income"
            android:title="@string/pref_title_regular_income" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_about_settings"
        android:key="pref_key_about_settings" >
        <Preference
            android:key="pref_key_rate_app"
            android:title="@string/pref_title_rate_app" />
        <Preference
            android:key="pref_key_about"
            android:title="@string/pref_title_about" />
    </PreferenceCategory>
</PreferenceScreen>