<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lundincast.my_finance_manager.activities.CreateCategoriesActivity">

    <LinearLayout
        android:id="@+id/name_section"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/name_field"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView2"
            android:layout_weight="3"
            android:inputType="text"
            android:hint="@string/default_text_category_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/color_section"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_section"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/color_field"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/category_color"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </LinearLayout>

</RelativeLayout>
