<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/transaction_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00.00 €"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:editable="false"
        android:textAlignment="center"
        android:textSize="25dp"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/category_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transaction_price"
        android:text="CATEGORIES"
        android:textColor="#c0c0c0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <View
        android:id="@+id/underline_1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/category_header"
        android:background="#c0c0c0" />


    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/underline_1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_above="@+id/relativeLayout" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@android:id/list"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="ADDITIONAL INFOS"
            android:textColor="#c0c0c0"
            android:textStyle="bold" />

        <View
            android:id="@+id/horizontal_line_2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/textView"
            android:paddingBottom="5dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:id="@+id/date_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/horizontal_line_2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/transaction_date"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/transaction_date"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView2"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_section"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/transaction_comment"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/transaction_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView3"
                android:layout_weight="3"
                android:hint="@string/transaction_comment_hint"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
